--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,9 @@
     "react-app-rewired": "^2.2.1",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
+    "react-dnd-cjs": "^9.5.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-html5-backend-cjs": "^9.5.1",
     "react-dom": "18.2.0",
     "react-linear-gradient-picker": "^3.0.1",
     "react-plotlyjs-ts": "^2.2.2",
@@ -56,7 +58,7 @@
     "prestart": "node export-versions.js",
     "start": "react-app-rewired start --scripts-version react-scripts",
     "build": "BUILD_PATH='./build' react-app-rewired build --openssl-legacy-provider build",
-    "test": "react-app-rewired test --transformIgnorePatterns 'node_modules/(?!react-dnd|@react-dnd)/'",
+    "test": "react-app-rewired test",
     "test:ci": "CI=true react-app-rewired test",
     "eject": "react-scripts eject",
     "format": "prettier --write .",
@@ -109,7 +111,10 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^axios$": "axios/dist/node/axios.cjs"
+      "^axios$": "axios/dist/node/axios.cjs",
+      "react-dnd": "react-dnd-cjs",
+      "react-dnd-html5-backend": "react-dnd-html5-backend-cjs",
+      "dnd-core": "dnd-core-cjs"
     }
   }
 }
