--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
-    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/colormap": "^2.3.4",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.8",
@@ -41,6 +41,7 @@
     "react-dnd-cjs": "^9.5.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-html5-backend-cjs": "^9.5.1",
+    "react-dnd-test-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-linear-gradient-picker": "^3.0.1",
     "react-plotlyjs-ts": "^2.2.2",
@@ -84,6 +85,7 @@
     "@types/plotly.js": "^2.12.30",
     "@types/react-redux": "^7.1.30",
     "@types/redux-mock-store": "^1.0.6",
+    "@types/testing-library__user-event": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
